; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/wininet/extr_url.c_a2w.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/wininet/extr_url.c_a2w.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CP_ACP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*)* @a2w to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @a2w(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i32, i32* @CP_ACP, align 4
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 @MultiByteToWideChar(i32 %5, i32 0, i8* %6, i32 -1, i32* null, i32 0)
  store i32 %7, i32* %4, align 4
  %8 = call i32 (...) @GetProcessHeap()
  %9 = load i32, i32* %4, align 4
  %10 = sext i32 %9 to i64
  %11 = mul i64 %10, 4
  %12 = trunc i64 %11 to i32
  %13 = call i32* @HeapAlloc(i32 %8, i32 0, i32 %12)
  store i32* %13, i32** %3, align 8
  %14 = load i32, i32* @CP_ACP, align 4
  %15 = load i8*, i8** %2, align 8
  %16 = load i32*, i32** %3, align 8
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @MultiByteToWideChar(i32 %14, i32 0, i8* %15, i32 -1, i32* %16, i32 %17)
  %19 = load i32*, i32** %3, align 8
  ret i32* %19
}

declare dso_local i32 @MultiByteToWideChar(i32, i32, i8*, i32, i32*, i32) #1

declare dso_local i32* @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
